package uk.co.droidinactu.ktjournalprompts;

public class JournalPromptsConfiguration {
}
